# quick-reader-svelte

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  rust-toolchain.toml  svelte.config.js  tailwind.config.js  tailwind.css  tailwind_merge.js  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: build-win-mac.yml  release.yml
common/: Cargo.toml
common/src/: lib.rs
docker/: linux-Dockerfile  linux-build.sh
js_bundle/: README.md
leptos-material-tailwind/: Cargo.toml  tailwind_merge.js
leptos-material-tailwind/js_bundle/: tailwind_merge.js
leptos-material-tailwind/src/: lib.rs
leptos-material-tailwind/src/theme/: mod.rs
leptos-material-tailwind/src/theme/Button/: Base.rs  ButtonFilled.rs  ButtonGradient.rs  ButtonOutlined.rs  ButtonSizes.rs  ButtonText.rs  Sizes.rs  mod.rs
src/: App.svelte  Button.rs  app.d.ts  app.html  app.rs  errors.rs  index.svelte  js_bindings.rs  lib.rs  main.rs  main.ts  material_tailwind.rs  splitter.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_settings.rs  appsettings.rs  lib.rs  main.rs
src/components/: Button.rs  MatIcon.rs
src/lib/: Animated.svelte  consts.ts  splitter.ts
src/lib/components/: Animated.svelte
src/lib/css/: base.css  darwin.css  linux.css  win32.css
src/lib/functions/: splitter.ts
src/lib/stores/: app_data.ts  app_settings.ts  appdata.ts  appsettings.ts  fonts.ts  platform_info.ts  router.ts
src/pages/: About.svelte  QuickReader.svelte  about.rs  font_chooser.rs  mod.rs  quick_reader.rs  settings.rs
src/pages/settings/: FontChooser.svelte  Settings.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/about/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/settings/font-chooser/[target]/: +page.svelte
src/styles/: base.css
