[workspace]
members = ["src-tauri", "leptos-material-tailwind"]

[package]
name = "quick-reader-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.5.0-alpha2", features = ["csr", "nightly"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
leptos_router = { version = "0.5.0-alpha2", features = ["csr", "nightly"] }
log = "0.4.19"
js-sys = "0.3.64"
thiserror = "1.0.44"
unicode-segmentation = "1.10.1"
web-sys = { version = "0.3.64", features = ["Selection", "Window", "EventTarget"] }

[profile.release]
panic = "abort" # Strip expensive unwind on panic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enable link time optimizations
strip = true # Remove debug symbols

[profile.wasm-release]
inherits = "release"
opt-level = 'z' # Optimize for binary size, but also turn off loop vectorization

[package.metadata.leptos]
lib-profile-release = "wasm-release"

# Conditionally do things differently if we are running on the web vs Tauri
[features]
web = []
