[package]
name = "leptos-material-tailwind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos =  "0.5.0-alpha2"
log = "0.4.19"
phf = { version = "0.11.2", features = ["macros"] }

[build-dependencies]
phf_macros = "0.11.2"
